# yammer

./: .gitignore  AUDIO_TESTING.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  idea.md  implementation_research.md
.beads/: issues.jsonl  last-touched
.github/workflows/: build.yml
docs/: GNOME_SETUP.md  ONBOARDING.md  callflow.d2  components.d2
docs/decisions/: 001-voxtral-realtime-evaluation.md
plans/: 001-kyutai-stt-integration.md  index.md  windows-support.md
scripts/: setup-gnome-shortcut.sh  toggle-dictation.sh
yammer-app/: TESTING.md  index.html  package-lock.json  package.json  vite.config.js
yammer-app/src/: main.js  styles.css
yammer-app/src-tauri/: Cargo.toml  ONBOARDING.md  tauri.conf.json
yammer-app/src-tauri/capabilities/: default.json
yammer-app/src-tauri/icons/: icon.icns
yammer-app/src-tauri/src/: lib.rs  main.rs  pipeline.rs
yammer-audio/: Cargo.toml  ONBOARDING.md
yammer-audio/src/: capture.rs  lib.rs  resample.rs  vad.rs
yammer-cli/: Cargo.toml
yammer-cli/src/: main.rs
yammer-core/: Cargo.toml  ONBOARDING.md
yammer-core/src/: config.rs  download.rs  error.rs  lib.rs  model.rs
yammer-llm/: Cargo.toml  ONBOARDING.md
yammer-llm/src/: corrector.rs  lib.rs
yammer-output/: Cargo.toml  ONBOARDING.md
yammer-output/src/: lib.rs
yammer-stt/: Cargo.toml  ONBOARDING.md
yammer-stt/src/: lib.rs  transcriber.rs
