[workspace]
resolver = "2"
members = [
    "yammer-core",
    "yammer-audio",
    "yammer-stt",
    "yammer-llm",
    "yammer-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andy"]
license = "MIT"
repository = "https://github.com/andy/yammer"

[workspace.dependencies]
# Common dependencies shared across crates
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
