[workspace]
resolver = "2"
members = [
    "yammer-core",
    "yammer-audio",
    "yammer-stt",
    "yammer-llm",
    "yammer-cli",
    "yammer-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andy"]
license = "MIT"
repository = "https://github.com/andy/yammer"

[workspace.dependencies]
# Common dependencies shared across crates
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
futures-util = "0.3"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
hound = "3"
ringbuf = "0.4"
rubato = "0.16"
whisper-rs = { version = "0.14", features = ["cuda"] }
ctrlc = "3"
llama_cpp = { version = "0.3", features = ["cuda"] }
