[package]
name = "yammer-audio"
version.workspace = true
edition.workspace = true

[dependencies]
yammer-core = { path = "../yammer-core" }
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
cpal.workspace = true
hound.workspace = true
ringbuf.workspace = true
rubato.workspace = true

[dev-dependencies]
tempfile = "3"
