[package]
name = "yammer-stt"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
moshi.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
hf-hub.workspace = true
sentencepiece.workspace = true
hound.workspace = true
rubato.workspace = true
