[package]
name = "yammer-app"
version = "0.1.0"
edition = "2021"
description = "Linux dictation app - local speech-to-text with LLM correction"
authors = ["Andy"]
license = "MIT"
rust-version = "1.70"

[lib]
name = "yammer_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Yammer crates
yammer-audio = { path = "../../yammer-audio" }
yammer-stt = { path = "../../yammer-stt" }
yammer-llm = { path = "../../yammer-llm" }
yammer-output = { path = "../../yammer-output" }
yammer-core = { path = "../../yammer-core" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
